fix squishing avatars

--- a/src/styles/FullTierList.css
+++ b/src/styles/FullTierList.css
@@ -238,7 +238,7 @@ img.avatar-img {
     .champion-container>p {
         display: none;
     }
-    img.avatar-img,
+    /* img.avatar-img, */
     .avatar-img-container {
         width: 25px;
         height: 25px;
